--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gh-pages": "^3.2.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.30.0",
     "react-query": "^3.34.20",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
