--- a/package.json
+++ b/package.json
@@ -1,32 +1,27 @@
 {
-  "name": "animation",
+  "name": "wooFlex",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.io/wooFlex",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.0.1",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^16.11.27",
-    "@types/react": "^18.0.5",
-    "@types/react-dom": "^18.0.0",
-    "@types/react-query": "^1.2.9",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/styled-components": "^5.1.25",
-    "framer-motion": "^6.3.0",
-    "gh-pages": "^3.2.3",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-hook-form": "^7.30.0",
-    "react-query": "^3.34.20",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "recoil": "^0.7.1",
-    "styled-component": "^2.8.0",
-    "styled-components": "^5.3.5",
-    "typescript": "^4.6.3",
-    "web-vitals": "^2.1.4"
+    "@types/jest": "^27.0.3",
+    "@types/node": "^16.11.17",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@types/styled-components": "^5.1.19",
+    "framer-motion": "^5.5.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.22.5",
+    "react-query": "^3.34.7",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "5.0.0",
+    "recoil": "^0.5.2",
+    "styled-components": "^5.3.3",
+    "typescript": "^4.5.4",
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -53,5 +48,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "homepage": "https://woosungkim0123.github.io/wooFlex",
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
